fix logo stretch + add hamburger svg

--- a/main.css
+++ b/main.css
@@ -25,7 +25,6 @@ html, body {
   line-height: 1.3;
 }
 
-
 /* Header */
 
 header {
@@ -39,8 +38,14 @@ header {
   padding: 25px;
 }
 
+.hamburger {
+  fill: white;
+  margin-right: 20px;
+}
+
 .main-logo {
   width: 80px;
+  height: 18px;
 }
 
 .search-bar {
